--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -148,7 +148,7 @@
 
 
         <div class="logo">
-            <a href="./index.html"><img src="documentos/img/logoprojeto.png" alt="Amigo Sangue Bom"></a>
+            <a href="./index.html"><img src="../documentos/img/logoprojeto.png" alt="Amigo Sangue Bom"></a>
         </div>
         <ul class="nav-bar">
             <li><a class="nav-link" href="./about_project.html">Sobre o projeto</a></li>
@@ -208,16 +208,16 @@
             <p> Veja abaixo os níveis atuais de estoque e saiba qual é o melhor momento para doar.</p>
 
             <div class="area_bloods">
-                <div class="icon_blood"> <img src="./documentos/img/Component 1.png" alt="nível de sangue">
+                <div class="icon_blood"> <img src="../documentos/img/Component 1.png" alt="nível de sangue">
                     <p> Agende a doação o quanto antes</p>
                 </div>
-                <div class="icon_blood"> <img src="./documentos/img/Component 2.png" alt="nível de sangue">
+                <div class="icon_blood"> <img src="../documentos/img/Component 2.png" alt="nível de sangue">
                     <p>Agende a doação nesta semana</p>
                 </div>
-                <div class="icon_blood"> <img src="./documentos/img/Component 3.png" alt="nível de sangue">
+                <div class="icon_blood"> <img src="../documentos/img/Component 3.png" alt="nível de sangue">
                     <p>Agende a doação para a próxima semana</p>
                 </div>
-                <div class="icon_blood"> <img src="./documentos/img/Component 4.png" alt="nível de sangue">
+                <div class="icon_blood"> <img src="../documentos/img/Component 4.png" alt="nível de sangue">
                     <p>Aguarde 10 dias para agendar</p>
                 </div>
             </div>
@@ -233,49 +233,49 @@
 
             <div class="title_estoque">
                 <h4>O+</h4>
-                <img src="documentos/img/Component 1.png" alt="">
+                <img src="../documentos/img/Component 1.png" alt="">
                 <p>Crítico</p>
             </div>
 
             <div class="title_estoque">
                 <h4>O-</h4>
-                <img src="documentos/img/Component 3.png" alt="">
+                <img src="../documentos/img/Component 3.png" alt="">
                 <p>Adequado</p>
             </div>
 
             <div class="title_estoque">
                 <h4>A+</h4>
-                <img src="documentos/img/Component 1.png" alt="">
+                <img src="../documentos/img/Component 1.png" alt="">
                 <p>Crítico</p>
             </div>
 
             <div class="title_estoque">
                 <h4>A-</h4>
-                <img src="documentos/img/Component 2.png" alt="">
+                <img src="../documentos/img/Component 2.png" alt="">
                 <p>Alerta</p>
             </div>
 
             <div class="title_estoque">
                 <h4>B+</h4>
-                <img src="documentos/img/Component 4.png" alt="">
+                <img src="../documentos/img/Component 4.png" alt="">
                 <p>Estável</p>
             </div>
 
             <div class="title_estoque">
                 <h4>B-</h4>
-                <img src="documentos/img/Component 3.png" alt="">
+                <img src="../documentos/img/Component 3.png" alt="">
                 <p>Adequado</p>
             </div>
 
             <div class="title_estoque">
                 <h4>AB+</h4>
-                <img src="documentos/img/Component 1.png" alt="">
+                <img src="../documentos/img/Component 1.png" alt="">
                 <p>Crítico</p>
             </div>
 
             <div class="title_estoque">
                 <h4>AB-</h4>
-                <img src="documentos/img/Component 3.png" alt="">
+                <img src="../documentos/img/Component 3.png" alt="">
                 <p>Adequado</p>
             </div>
         </div>
@@ -311,13 +311,13 @@
             <div class="secoes-rodape" id="siga-nos">
                 <ul class="itens-imagem">
                     <li class="titulo-rodape">SIGA-NOS</li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="documentos/img/FacebookLogo.png"
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/FacebookLogo.png"
                                 alt="facebook"></a></li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="documentos/img/YoutubeLogo.png"
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/YoutubeLogo.png"
                                 alt="youtube"></a></li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="documentos/img/TwitterLogo.png"
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/TwitterLogo.png"
                                 alt="twitter"></a></li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="documentos/img/InstagramLogo.png"
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/InstagramLogo.png"
                                 alt="instagram"></a></li>
                 </ul>
             </div>
