--- a/codigo-fonte/about_project.html
+++ b/codigo-fonte/about_project.html
@@ -190,7 +190,7 @@
             <div id="personaBrian" class="persona">
                 <img src="../documentos/img/fotoBrian.jpeg" alt="Foto do brian">
                 <h2>Brian</h2>
-                <p>Graduando em ADS</p>
+                <p>27 anos. Graduando em Análise e Desenvolvimento de Sistemas</p>
             </div>
 
             <div id="personaErick" class="persona">
