--- a/codigo-fonte/area_login.html
+++ b/codigo-fonte/area_login.html
@@ -168,7 +168,7 @@
         <div class="login-form">
             <div id="modal-title">
                 <div>
-                    <img src="documentos/img/logoprojeto.png" width="145px" height="80px" alt="Amigo Sangue Bom">
+                    <img src="../documentos/img/logoprojeto.png" width="145px" height="80px" alt="Amigo Sangue Bom">
                 </div>
             </div>
             <p class="welcome-friend"> Bem-Vindo, <span style="color:#A63539">Amigo!</span></p>
