--- a/codigo-fonte/campaign_area.html
+++ b/codigo-fonte/campaign_area.html
@@ -129,7 +129,7 @@
 
 
         <div class="logo">
-            <a href="./index.html"><img src="documentos/img/logoprojeto.png" alt="Amigo Sangue Bom"></a>
+            <a href="./index.html"><img src="../documentos/img/logoprojeto.png" alt="Amigo Sangue Bom"></a>
         </div>
         <ul class="nav-bar">
             <li><a class="nav-link" href="./index.html">Início</a></li>
@@ -169,7 +169,7 @@
                 </div>
                 <a href="#">
                     <div class="camp_img">
-                        <img src="documentos/img/doe_1.png" alt="">
+                        <img src="../documentos/img/doe_1.png" alt="">
                     </div>
                 </a>
 
@@ -178,10 +178,10 @@
                     ajude quem mais precisa. </div>
 
                 <div class="icon_area">
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Facebook.png" alt="Curtir"></a></div>
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Favorite.png" alt="Favoritar"></a>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Facebook.png" alt="Curtir"></a></div>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Favorite.png" alt="Favoritar"></a>
                     </div>
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Right.png" alt="Compartilhar"></a>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Right.png" alt="Compartilhar"></a>
                     </div>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                 </div>
                 <a href="#">
                     <div class="camp_img">
-                        <img src="documentos/img/doe_2.png" alt="">
+                        <img src="../documentos/img/doe_2.png" alt="">
                     </div>
                 </a>
 
@@ -201,10 +201,10 @@
                     ajude quem mais precisa. </div>
 
                 <div class="icon_area">
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Facebook.png" alt="Curtir"></a></div>
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Favorite.png" alt="Favoritar"></a>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Facebook.png" alt="Curtir"></a></div>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Favorite.png" alt="Favoritar"></a>
                     </div>
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Right.png" alt="Compartilhar"></a>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Right.png" alt="Compartilhar"></a>
                     </div>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                 </div>
                 <a href="#">
                     <div class="camp_img">
-                        <img src="documentos/img/doe_3.png" alt="">
+                        <img src="../documentos/img/doe_3.png" alt="">
                     </div>
                 </a>
 
@@ -224,10 +224,10 @@
                     ajude quem mais precisa. </div>
 
                 <div class="icon_area">
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Facebook.png" alt="Curtir"></a></div>
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Favorite.png" alt="Favoritar"></a>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Facebook.png" alt="Curtir"></a></div>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Favorite.png" alt="Favoritar"></a>
                     </div>
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Right.png" alt="Compartilhar"></a>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Right.png" alt="Compartilhar"></a>
                     </div>
                 </div>
             </div>
@@ -238,7 +238,7 @@
                 </div>
                 <a href="#">
                     <div class="camp_img">
-                        <img src="documentos/img/doe_4.png" alt="">
+                        <img src="../documentos/img/doe_4.png" alt="">
                     </div>
                 </a>
 
@@ -247,10 +247,10 @@
                     ajude quem mais precisa. </div>
 
                 <div class="icon_area">
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Facebook.png" alt="Curtir"></a></div>
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Favorite.png" alt="Favoritar"></a>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Facebook.png" alt="Curtir"></a></div>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Favorite.png" alt="Favoritar"></a>
                     </div>
-                    <div class="fb-icon"> <a href="#"><img src="documentos/img/Right.png" alt="Compartilhar"></a>
+                    <div class="fb-icon"> <a href="#"><img src="../documentos/img/Right.png" alt="Compartilhar"></a>
                     </div>
                 </div>
             </div>
@@ -265,13 +265,13 @@
     <footer>
         <ul>
             <div class="imagens-footer">
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/FacebookLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/FacebookLogo.png"
                         alt="Facebook"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/YoutubeLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/YoutubeLogo.png"
                         alt="Youtube"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/TwitterLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/TwitterLogo.png"
                         alt="Twitter"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/InstagramLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/InstagramLogo.png"
                         alt="Instagram"></li>
             </div>
         </ul>
