--- a/codigo-fonte/contact_us_area.html
+++ b/codigo-fonte/contact_us_area.html
@@ -128,7 +128,7 @@
 
 
         <div class="logo">
-            <a href="./index.html"><img src="documentos/img/logoprojeto.png" alt="Amigo Sangue Bom"></a>
+            <a href="./index.html"><img src="../documentos/img/logoprojeto.png" alt="Amigo Sangue Bom"></a>
         </div>
         <ul class="nav-bar">
             <li><a class="nav-link" href="./index.html">Início</a></li>
@@ -191,13 +191,13 @@
     <footer>
         <ul>
             <div class="imagens-footer">
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/FacebookLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/FacebookLogo.png"
                         alt="Facebook"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/YoutubeLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/YoutubeLogo.png"
                         alt="Youtube"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/TwitterLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/TwitterLogo.png"
                         alt="Twitter"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/InstagramLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/InstagramLogo.png"
                         alt="Instagram"></li>
             </div>
         </ul>
