--- a/codigo-fonte/how_donate.html
+++ b/codigo-fonte/how_donate.html
@@ -366,13 +366,13 @@
     <footer>
         <ul>
             <div class="imagens-footer">
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/FacebookLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/FacebookLogo.png"
                         alt="Facebook"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/YoutubeLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/YoutubeLogo.png"
                         alt="Youtube"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/TwitterLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/TwitterLogo.png"
                         alt="Twitter"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/InstagramLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/InstagramLogo.png"
                         alt="Instagram"></li>
             </div>
         </ul>
