--- a/codigo-fonte/scheduler_area.html
+++ b/codigo-fonte/scheduler_area.html
@@ -17,8 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> <!-- fonte Inter -->
 
     <!-- <script defer type="text/javascript" src="/js/modal.js"></script> -->
-    <script defer type="text/javascript" src="/js/modal_test.js"></script>
-    <script defer type="text/javascript" src="/js/index.js"></script>
+    <script defer type="text/javascript" src="./js/modal_test.js"></script>
+    <script defer type="text/javascript" src="./js/index.js"></script>
+    <script defer type="text/javascript" src="./js/carrosel.js"></script>
 
     <title>Amigo Sangue Bom | Agendamento </title>
 
@@ -129,7 +130,7 @@
 
 
         <div class="logo">
-            <a href="./index.html"><img src="documentos/img/logoprojeto.png" alt="Amigo Sangue Bom"></a>
+            <a href="./index.html"><img src="../documentos/img/logoprojeto.png" alt="Amigo Sangue Bom"></a>
         </div>
         <ul class="nav-bar">
             <li><a class="nav-link" href="./index.html">Início</a></li>
@@ -227,13 +228,13 @@
     <footer>
         <ul>
             <div class="imagens-footer">
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/FacebookLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/FacebookLogo.png"
                         alt="Facebook"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/YoutubeLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/YoutubeLogo.png"
                         alt="Youtube"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/TwitterLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/TwitterLogo.png"
                         alt="Twitter"></li>
-                <li class="list-itens"><a class="footer-link" href=""></a><img src="documentos/img/InstagramLogo.png"
+                <li class="list-itens"><a class="footer-link" href=""></a><img src="../documentos/img/InstagramLogo.png"
                         alt="Instagram"></li>
             </div>
         </ul>
