--- a/codigo-fonte/campaign_area.html
+++ b/codigo-fonte/campaign_area.html
@@ -75,6 +75,7 @@
         <div class="input-container">
             <div class="icon_aws"><i class="fas fa-lock" style="color:#A63539"></i></div>
             <input placeholder="Senha" class="input-field" type="password" id="password_input">
+            <div class="submit-lente"><i class="fas fa-eye slash" data-password-eye style="color:#A63539"></i></div>
             <span class="password-progress-bar"></span>
         </div>
 
