--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -19,7 +19,7 @@
     <!-- <script defer type="text/javascript" src="/js/modal.js"></script> -->
     <script defer type="text/javascript" src="js/modal_test.js"></script>
     <script defer type="text/javascript" src="js/index.js"></script>
-    <script defer type="text/javascript" src="js/show-password.js"></script>
+    <script defer type="text/javascript" src="js/show_password.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 
